// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[InputBox Component] renders Date without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
    >
      <input
        aria-label="Value"
        class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-date rcx-input-box"
        size="1"
        type="date"
        value="Value"
      />
      <span
        class="rcx-box rcx-box--full rcx-input-box__addon"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-calendar rcx-icon rcx-css-4pvxx3"
        >
          
        </i>
      </span>
    </label>
  </div>
</body>
`;

exports[`[InputBox Component] renders Default without crashing 1`] = `
<body>
  <div>
    <input
      aria-label="Value"
      class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box"
      size="1"
      type="text"
      value="Value"
    />
  </div>
</body>
`;

exports[`[InputBox Component] renders Disabled without crashing 1`] = `
<body>
  <div>
    <input
      aria-label="Value"
      class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box"
      disabled=""
      size="1"
      type="text"
      value="Value"
    />
  </div>
</body>
`;

exports[`[InputBox Component] renders InputBox.Skeleton without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-skeleton__input"
    >
      <span
        class="rcx-box rcx-box--full rcx-skeleton--text rcx-skeleton rcx-css-1qcz93u"
      />
    </div>
  </div>
</body>
`;

exports[`[InputBox Component] renders Invalid without crashing 1`] = `
<body>
  <div>
    <input
      aria-label="Value"
      class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box"
      size="1"
      type="text"
      value="Value"
    />
  </div>
</body>
`;

exports[`[InputBox Component] renders SmallVariants without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-1dl0zzg"
      style="gap: 8px;"
    >
      <input
        aria-label="Name"
        class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--type-text rcx-input-box"
        placeholder="Name"
        size="1"
        type="text"
      />
      <label
        class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
      >
        <input
          aria-label="Search"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--small rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box"
          placeholder="Search"
          size="1"
          type="text"
        />
        <span
          class="rcx-box rcx-box--full rcx-input-box__addon"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-magnifier rcx-icon rcx-css-4pvxx3"
          >
            
          </i>
        </span>
      </label>
    </div>
  </div>
</body>
`;

exports[`[InputBox Component] renders Time without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
    >
      <input
        aria-label="Value"
        class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-time rcx-input-box"
        size="1"
        type="time"
        value="Value"
      />
      <span
        class="rcx-box rcx-box--full rcx-input-box__addon"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-clock rcx-icon rcx-css-4pvxx3"
        >
          
        </i>
      </span>
    </label>
  </div>
</body>
`;

exports[`[InputBox Component] renders WithAddon without crashing 1`] = `
<body>
  <div>
    <label
      class="rcx-box rcx-box--full rcx-label  rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
    >
      <input
        aria-label="Value"
        class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box"
        size="1"
        type="text"
      />
      <span
        class="rcx-box rcx-box--full rcx-input-box__addon"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-send rcx-icon rcx-css-4pvxx3"
        >
          〈
        </i>
      </span>
    </label>
  </div>
</body>
`;

exports[`[InputBox Component] renders WithPlaceholder without crashing 1`] = `
<body>
  <div>
    <input
      aria-label="Value"
      class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box"
      placeholder="Placeholder"
      size="1"
      type="text"
    />
  </div>
</body>
`;
